--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <div>
             <article>
               <figure>
-                <img src="https://teal-hawk.static.domains/quickstart.svg" alt="quickstart">
+                <img src="img/quickstart.svg" alt="quickstart">
               </figure>
               <br>
               <hgroup>
