--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <div>
             <article>
               <figure>
-                <img src="/img/quickstart.svg" alt="quickstart">
+                <img src="/img/QuickStart.svg" alt="quickstart">
               </figure>
               <br>
               <hgroup>
