--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <div>
             <article>
               <figure>
-                <img src="/img/QuickStart.svg" alt="quickstart">
+                <img src="https://cdn.jsdelivr.net/gh/jnsfrd/ww@main/img/QuickStart.svg" alt="quickstart">
               </figure>
               <br>
               <hgroup>
