--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <div>
             <article>
               <figure>
-                <img src="https://teal-hawk.static.domains/flower.svg" alt="Flower AI">
+                <img src="https://cdn.jsdelivr.net/gh/jnsfrd/ww@main/img/Flower.svg" alt="Flower AI">
               </figure>
               <br>
               <hgroup>
