--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
           <div>
             <article>
               <figure>
-                <img src="https://teal-hawk.static.domains/huggingface.svg" alt="HuggingFace">
+                <img src="https://cdn.jsdelivr.net/gh/jnsfrd/ww@main/img/HuggingFace.svg" alt="HuggingFace">
               </figure>
               <br>
               <hgroup>
