--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="grid">
             <div>
               <figure>
-                <img src="https://teal-hawk.static.domains/pnp.webp" alt="Risk evaluation">
+                <img src="https://cdn.jsdelivr.net/gh/jnsfrd/ww@main/img/mycronic.webp" alt="Pick and place">
               </figure>
             </div>
             <div>
