--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <p id="main_description"> The FEDn framework enables seamless development and deployment of federated learning (FL) applications. It is designed to support the entire R&D innovation journey, from personal testing and proof-of-concepts to real-world, geographically distributed FL. FEDn is scalable, resilient, secure, and cloud-native, offering flexible deployment options while supporting all major machine learning (ML) frameworks. </p>
         </hgroup>
         <figure>
-          <img src="https://teal-hawk.static.domains/fedn_framework_1200_540.webp" width="1200" height="540" alt="FEDn framework" />
+          <img src="https://cdn.jsdelivr.net/gh/jnsfrd/ww@main/img/fedn_framework.webp" width="1200" height="540" alt="FEDn framework" />
         </figure>
       </section>
       <section id="fl">
