--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
               <hgroup>
                 <h5>Enhancing IoT security</h5>
                 <p>
-                  <small> Federated data analysis can enhances IoT privacy and threat detection.</small>
+                  <small> Federated data analysis can enhance IoT privacy and threat detection.</small>
                   <br>
                   <a href="#" class="secondary" target="_blank">
                     <small>Learn more »</small>
