--- a/index.html
+++ b/index.html
@@ -214,12 +214,11 @@
       <section id="videos">
         <hgroup>
           <h1>Videos</h1>
-          <p> Video guides and walkthoughs from the Scaleout team. </p>
+          <p> Video guides and walkthroughs from the Scaleout team. </p>
         </hgroup>
       </section>
       <section id="video">
         <article>
-          <header>Featured video</header>
           <div class="grid">
             <div>
               <iframe width="100%" height="315" src="https://www.youtube.com/embed/Qiq1-5k9vqY?si=awmnjyhUK-kDnteG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe>
