--- a/404.html
+++ b/404.html
@@ -26,7 +26,7 @@
   <article id="404">
     <h1>404 Not Found</h1>
     <p>The page you are looking for might have been removed, had its name changed, or is temporarily unavailable.</p>
-    <p><a href="#" class="secondary">&laquo; Back</a></p>
+    <p><a href="index.html" class="secondary">&laquo; Back</a></p>
     <br>    
   </article>
 </main>
