--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
         <p>Salman Toor, CTO</p>
         <p>Jens Frid, CMO</p>
         <p>Niklas Holmström, Software Developer</p>
-        <p>Morgan Ekmefjord, Product & Cybersecurity</p>
+        <p>Morgan Ekmefjord, Product Security</p>
         <p>Sowmya Seenivasan, ML Engineer</p>
       </div>
       <div>
