--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       <section id="tutorials">
         <hgroup>
           <h2>Tutorials</h2>
-          <p>Highlighted tutorials and guides</p>
+          <p>Highlighted examples and guides</p>
         </hgroup>
         <div class="grid">
           <div>
