--- a/framework.html
+++ b/framework.html
@@ -103,16 +103,7 @@
     </hgroup>
     <div class="grid">
       <div>
-        <iframe
-          width="100%"
-          height="315"
-          src="https://www.youtube.com/embed/Qiq1-5k9vqY?si=_YpV3qkScj6z-rsI"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin"
-          allowfullscreen
-        ></iframe>
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/tDknBCZGnTg?si=8vkh08zbHc2oqVQ6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
       <div>
         <b>Benefits</b><br />
