--- a/framework.html
+++ b/framework.html
@@ -97,7 +97,7 @@
 <section id="video">
   <article>
     <hgroup>
-      <h3>FEDn Studio overview</h3>
+      <h3>Getting Started with FEDn</h3>
       <p>
       </p>
     </hgroup>
@@ -106,13 +106,8 @@
         <iframe width="100%" height="315" src="https://www.youtube.com/embed/tDknBCZGnTg?si=8vkh08zbHc2oqVQ6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
       <div>
-        <b>Benefits</b><br />
-        <small>
-          To develop FEDn projects locally and deploy them via FEDn Studio, you can leverage Kubernetes-hosted FEDn for production environments, ensuring secure federated learning (FL) clients through token authentication and role-based access control (RBAC). 
-          <br />
-          <br />
-          Integration is facilitated via a REST API, while dashboards offer orchestration and results visualization. Admin tools are available for managing the FEDn network, enabling collaborative data science within shared workspaces. The deployment is flexible, supporting both cloud and on-premise setups.
-        </small>
+          This video covers the following three sections related to the FEDn framework: Where to find information about the FEDn framework, a step-by-step guide to your first federated machine learning project using the FEDn framework, and the terminologies used in the FEDn framework.
+
       </div>
     </div>
   </article>
