--- a/framework.html
+++ b/framework.html
@@ -106,8 +106,25 @@
         <iframe width="100%" height="315" src="https://www.youtube.com/embed/tDknBCZGnTg?si=8vkh08zbHc2oqVQ6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
       <div>
-          This video covers the following three sections related to the FEDn framework: Where to find information about the FEDn framework, a step-by-step guide to your first federated machine learning project using the FEDn framework, and the terminologies used in the FEDn framework.
-
+          <p>
+          This video covers the following three sections related to the FEDn framework: 
+          <br>
+          <ul>
+          <li>
+          Where to find information about the FEDn framework.
+          </li>
+          <li>
+          A step-by-step guide to your first federated machine learning project using the FEDn framework.
+          </li>
+          <li> 
+          The terminologies used in the FEDn framework.
+          </li>
+          </ul>
+          </p>
+          <p>
+          See the rest of the FEDn video series
+        <a href="videos.html" class="contrast">here »</a>          
+        </p>
       </div>
     </div>
   </article>
